--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <div class="tip-calculator">
       <div class="tip-selectors">
         <p><label for="bill">Bill</label></p>
-        <div class="input-bill"><input id="bill" type="number" min="0" step="0.01" value="0"></div>
+        <div class="input input-bill"><input id="bill" type="number" min="0.01" step="0.01" value=""></div>
         <p class="select-tip">Select Tip %</p>
         <div class="tip-buttons">
           <button value="5">5%</button>
@@ -38,7 +38,7 @@
         <p>
         <label for="people">Number of People</label>
         </p>
-        <div class="input-people"><input id="people" type="number" min="1" value="0"></div>
+        <div class="input input-people"><input id="people" type="number" min="1" value=""></div>
       </div>
 
       <div class="tip-result">
