--- a/index.html
+++ b/index.html
@@ -28,12 +28,12 @@
         <div class="input input-bill"><input id="bill" type="number" min="0.01" step="0.01" value=""></div>
         <p class="select-tip">Select Tip %</p>
         <div class="tip-buttons">
-          <button value="5">5%</button>
-          <button value="10">10%</button>
-          <button value="15" data-selected="true">15%</button>
-          <button value="25">25%</button>
-          <button value="50">50%</button>
-          <input id="custom" type="number" placeholder="Custom" min="1" max="100">
+          <button class="percentage" value="5">5%</button>
+          <button class="percentage" value="10">10%</button>
+          <button class="percentage" value="15" data-selected="true">15%</button>
+          <button class="percentage" value="25">25%</button>
+          <button class="percentage" value="50">50%</button>
+          <input id="custom" class="percentage" type="number" placeholder="Custom" min="1" max="100">
         </div>
         <p>
         <label for="people">Number of People</label>
