--- a/index.html
+++ b/index.html
@@ -22,6 +22,7 @@
     <img src="images/logo.svg" alt="calculator logo">
   </header>
   <main>
+    <h1 aria-label="tip-calculator"></h1>
     <div class="tip-calculator">
       <div class="tip-selectors">
         <p><label for="bill">Bill</label></p>
